<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- 全局 -->
    <string name="tip">提示</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    
    
    
    
    <string name="app_name">荔枝园商业版</string>
    <string name="app_main_name">荔枝园</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    
    <string name="app_main_tips">1284671认证大学生在线，坐等兼职！</string>
    <string name="publish_part_time_job">发布兼职</string>
    <string name="find_person">找人</string>
    <string name="message_notice">消息通知</string>
    <string name="manager_job">职位管理</string>
    <string name="publish">发布</string>
    <string name="back">返回</string>
    <string name="person_info">个人中心</string>
    <string name="find_someone">找荔枝</string>
    <string name="notice">通知</string>
    <string name="clear">清除</string>
    
    
    
    
    <string name="hint_user_name">请输入用户名</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_forget_password">忘记密码</string>
    <string name="login">登录</string>
    
    <string name="has_new_version">发现新版本，是否立即更新？</string>
    <string name="is_updating">正在更新，请稍候...</string>
    <string name="current_is_new_version">当前已是最新版本</string>
    
    
    
    
    

</resources>
