<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#eeeeee"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_launcher" 
            >
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="1" >

        <LinearLayout
            android:id="@+id/lx1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/com_input"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/login_username"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/login_phone"
                android:drawablePadding="10dp"
                android:hint="@string/hint_user_name"
                android:inputType="phone"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray"
                android:textSize="16sp" >
            </EditText>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="1px"
                android:background="@color/gray" />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/password"
                android:drawablePadding="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:paddingLeft="10dp"
                android:textColorHint="@color/gray"
                android:textSize="16sp" >
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lx1"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/login"
                    android:layout_width="fill_parent"
                    android:layout_height="40dip"
                    android:paddingLeft="40dp"
                    android:paddingRight="40dp"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="17sp" 
                    />
                
            </LinearLayout>

            <Button
                android:id="@+id/forget "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@android:color/transparent"
                android:onClick="forget"
                android:text="@string/hint_forget_password"
                android:textColor="#cccccc"
                android:textSize="16sp" />
            
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>